[package]
name = "snek"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]

[dependencies.bevy]
git = "http://github.com/bevyengine/bevy"
default-features = false
features = ["bevy_asset", "bevy_winit", "dynamic", "png", "render"]
